--- a/portfolio/src/styles/Introduction/styles.css
+++ b/portfolio/src/styles/Introduction/styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .profile-container{
     border-radius: 200px;
     width:100%;
@@ -8,20 +12,31 @@
     text-align: center;
     display: flex;
     flex-direction: row;
-
+    height: 500px;
+    width: 50%;
+    position: relative;
+    background-color: #325a9f;
+    border-radius: 10px;
+    border: 4px solid;
 }
 .image{
     padding:20px;
     height:auto;
-    width: 200px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex:1;
+    z-index:2;
+    animation: float 2s ease-in-out infinite;
 }
 
 .description{
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    padding:10px
+    flex:1;
+    text-align: left;
+    padding-left: 60px;
 }
 
 .first{
@@ -30,3 +45,32 @@
     align-items: center;
     justify-content: center;
 }
+
+@keyframes float {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  
+  .float-animation {
+    animation: float 2s ease-in-out infinite;
+  }
+
+  h1{
+    font-size: 60px;
+    padding: 1px;
+    color: #f7b4a7;
+    font-weight: bold
+  }
+
+  .love{
+    color: #9fcccd;
+    text-align: left;
+    font-size: 26px;
+  }
