Added skills icons and grid

--- a/portfolio/src/styles/AboutMe/styles.css
+++ b/portfolio/src/styles/AboutMe/styles.css
@@ -1,5 +1,20 @@
 .cont{
-    background-color:red;
-    height:200px
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
+    width:70%;
+    padding:20px
 }
 
+.web-dev{
+    color: #9fcccd;
+    font-size: 26px;
+}
+
+.aboutme{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
