--- a/portfolio/src/styles/general/grid.css
+++ b/portfolio/src/styles/general/grid.css
@@ -1,3 +1,6 @@
 .grid-container{
-    width: 50%;
+    width: 80%;
+    background-color: #325a9f;
+    border-radius: 10px;
+    border: 4px solid
 }
