--- a/portfolio/src/styles/general/grid.css
+++ b/portfolio/src/styles/general/grid.css
@@ -1,6 +1,15 @@
 .grid-container{
-    width: 80%;
+    width: 50%;
+    display: "flex";
+    align-items: center;
+    justify-content: center;
     background-color: #325a9f;
     border-radius: 10px;
     border: 4px solid
+}
+
+.grid-item{
+    display: "flex";
+    align-items: center;
+    justify-content: center;
 }
