--- a/portfolio/src/styles/AboutMe/styles.css
+++ b/portfolio/src/styles/AboutMe/styles.css
@@ -1,11 +1,7 @@
 .cont{
     display:flex;
     flex-direction:column;
-    align-items:center;
-    justify-content:center;
-    text-align:center;
-    width:70%;
-    padding:20px
+    text-align:left;
 }
 
 .web-dev{
@@ -14,7 +10,17 @@
 }
 
 .aboutme{
+    width: 70%;
     display:flex;
-    align-items:center;
-    justify-content:center;
+    text-align: left;
+    background-color: #325a9f;
+    border-radius: 10px;
+    border: 4px solid;
+    padding:20px;
+}
+
+.centering{
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
