--- a/portfolio/src/styles/Introduction/styles.css
+++ b/portfolio/src/styles/Introduction/styles.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+body {
+  font-family: 'Inter', sans-serif; /* Set the font for the entire app */
+}
+
 .profile-container{
     border-radius: 200px;
     width:100%;
@@ -14,31 +20,56 @@
 
 .intro-container{
     text-align: center;
+    justify-content: center;
     display: flex;
     flex-direction: row;
     position: relative;
     width: 100%;
-    padding:30px;
-}
-
-.image{
-    padding:20px;
     height:auto;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    flex:1;
-    z-index:2;
-    animation: float 2s ease-in-out infinite;
+    padding:80px;
 }
 
 .description{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width:600px;
+    width:50%;
     flex:1;
     text-align: left;
     padding-left: 20px;
+}
+
+.
+
+.btn{
+  margin-top:40px;
+}
+
+.logo{
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  transform: translateY(-40px);
+  position: relative;
+  padding : 0px;
+}
+
+.letterz{
+  position:absolute;
+}
+
+.letterp{
+  position:absolute;
+  transform: translate(60%, 30%);
+}
+
+.text-animate {
+  display:inline-block;
+
+  animation: bounceIn 1s 1s;
+  animation-fill-mode:forwards;
+  min-width:10px;
 }
 
 .first{
@@ -66,35 +97,38 @@
 
   h1{
     font-size: 4vw;
+    font-size: clamp(16px, 4vw, 70px);
     padding: 1px;
     font-weight: bold
   }
 
-  @media (min-width: 768px) { /* Medium screens (tablets) */
+  .love{
+    text-align: left;
+    font-size: clamp(16px, 3vw, 50px);
+  }
+  
+  /*@media (min-width: 768px) {
     h1 {
       font-size: 4vw;
     }
   }
   
-  @media (min-width: 1200px) { /* Large screens (desktops) */
+  @media (min-width: 1200px) {
     h1 {
       font-size: 3vw;
     }
   }
 
-  .love{
-    text-align: left;
-    font-size: 3vw;
-  }
+  
 
-  @media (min-width: 768px) { /* Medium screens (tablets) */
+  @media (min-width: 768px) {
     .love {
       font-size: 3vw;
     }
   }
   
-  @media (min-width: 1200px) { /* Large screens (desktops) */
+  @media (min-width: 1200px) {
     .love {
       font-size: 2vw;
     }
-  }
+  }*/
